--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title>Markdown Site</title>
 
-<script async src="markdown-site-main.js"></script>
+<script async src="https://sharat87.github.io/markdown-site/markdown-site-main.js"></script>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Fira+Mono:400,700|Alegreya:700">
 <style>
