Add copy button for code blocks.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         font-family: Alegreya, serif;
     }
 
-    pre, p code {
+    pre code, p code {
         font-family: 'Fira Mono', monospace;
         font-size: .9em;
     }
