Contents to show on error can be set in a template.

--- a/index.html
+++ b/index.html
@@ -21,3 +21,7 @@
         font-size: .9em;
     }
 </style>
+
+<template id="status404">
+    <p>Sorry, that document doesn't exist!</p>
+</template>
