--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <meta charset="utf-8">
 <title>Markdown Site</title>
 
+<!--
+ markdown-site: https://github.com/sharat87/markdown-site
+ License: MIT License
+  -->
+
 <script async src="https://sharat87.github.io/markdown-site/markdown-site-main.js"></script>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Fira+Mono:400,700|Alegreya:700">
