Set font for all `code` elements.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         font-family: Alegreya, serif;
     }
 
-    pre code, p code {
+    code {
         font-family: 'Fira Mono', monospace;
         font-size: .9em;
     }
