Moved all naked code into a separate function.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     }
 </style>
 
+<body onload="boot()">
+
 <template id="status404">
     <p>Sorry, that document doesn't exist!</p>
 </template>
