Call `boot` after page load, not `onload`.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     }
 </style>
 
-<body onload="boot()">
+<body>
 
 <template id="status404">
     <p>Sorry, that document doesn't exist!</p>
 </template>
+
+<script>boot()</script>
