Some more working and passing tests.

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <meta charset="utf-8">
-<title>Jasmine Spec Runner v3.1.0</title>
+<title>Markdown-site &mdash; Jasmine Spec Runner v3.1.0</title>
 
 <link rel="shortcut icon" type="image/png" href="jasmine-3.1.0/jasmine_favicon.png">
 <link rel="stylesheet" href="jasmine-3.1.0/jasmine.css">
@@ -10,6 +10,7 @@
 <script src="jasmine-3.1.0/jasmine-html.js"></script>
 <script src="jasmine-3.1.0/boot.js"></script>
 
+<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 <script src="markdown-site-main.js"></script>
 
 <!-- include spec files here... -->
